--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 }
 
 dependencies {
+    // 롬복 디펜던시 추가
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
