--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 
 # db source url
-spring.datasource.url=jdbc:mysql://localhost:3306/study?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/study?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://192.168.12.4:3306/study?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+
 
 # db response name
 spring.datasource.username=root
 
 # db response password
-spring.datasource.password=1234
+#spring.datasource.password=1234
+spring.datasource.password=root
 
 #JPA Configuration
-spring.jpa.show-sql=true
-
-spring.jackson.property-naming-strategy=SNAKE_CASE
+#spring.jpa.show-sql=true
+#
+#spring.jackson.property-naming-strategy=SNAKE_CASE
