CRUD 테스트 코드 작성하라

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #JPA Configuration
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #
 #spring.jackson.property-naming-strategy=SNAKE_CASE
